# light-bar-2-api

./: .editorconfig.conf  .gitignore  .gitlab-ci.yml  .releaserc.json  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  swagger.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
main/: CMakeLists.txt  idf_component.yml  main.c
main/captive_portal/: captive_portal.c  captive_portal.h
main/config/: config_loader.c  config_loader.h  default.json
main/log/: log.c  log.h  log_buffer.c  log_buffer.h  log_hook.c  log_hook.h
main/nrf24/: nrf24.c  nrf24.h
main/storage/: storage.c  storage.h
main/storage/nvs/: nvs.c  nvs.h
main/storage/spiffs_storage/: spiffs_storage.c  spiffs_storage.h
main/time_sync/: time_sync.c  time_sync.h
main/webserver/: webserver.c  webserver.h
main/webserver/api/: api.c  api.h
main/webserver/api/helper/: auth.c  auth.h  json.c  json.h
main/webserver/api/v1/: v1.c  v1.h
main/webserver/html/: index.html
main/webserver/html/css/: style.css
main/webserver/html/js/: main.js
main/wireless/: wireless.c  wireless.h
main/wireless/ble/: ble.c  ble.h
main/wireless/wifi/: wifi.c  wifi.h
